fix: fix to unvisible colors on dark theme

--- a/src/styles/components/_notFound.scss
+++ b/src/styles/components/_notFound.scss
@@ -9,7 +9,7 @@
     margin-right: 2rem;
 
     h1 {
-      color: $light-txt;
+
       font-size: 2.5rem;
       margin-bottom: 1rem;
       width: 100%;
@@ -17,7 +17,7 @@
     }
 
     p {
-      color: $light-txt;
+
       font-size: 1.5rem;
       margin-bottom: 2rem;
       width: 100%;
